@@ -1,4 +1,4 @@
-// 1.20.1	2024-03-12T23:21:32.9374491	Recipes
+// 1.20.1	2024-03-13T19:52:28.1484027	Recipes
 4b4d517a9d089ca8364caa37e6af046036ac7e4b data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun.json
 7ffa02ab3daf2efe7cf0743d694a8c87bed270f0 data/chilibulletweapons/advancements/recipes/combat/chili_bullet.json
 d1033981031f8108c90e0d28a3154715009e80b8 data/chilibulletweapons/advancements/recipes/combat/gun.json
@@ -11,6 +11,7 @@ d9328aca5515345334e81e0469345aaa401ff122 data/chilibulletweapons/advancements/re
 fbd23f8578937b79e2b96c0d3feeb143871d08de data/chilibulletweapons/advancements/recipes/food/half_chili_fish_sandwich.json
 b2515a763fc5b294b4a79a2f1fca1730c3f72d4a data/chilibulletweapons/advancements/recipes/food/half_chili_meat_sandwich.json
 fee57ccdc1c2f5d8c2711443669e7995e89bfb16 data/chilibulletweapons/advancements/recipes/food/half_chili_potato_sandwich.json
+aed24c9e5dd11b6502f34b263bd83feb6a6f3d53 data/chilibulletweapons/advancements/recipes/food/pasta_oil_and_chili.json
 8ba4ebeefd8538b7c01a4b392ae5ed2a36fd3f89 data/chilibulletweapons/advancements/recipes/misc/bullet_chili_from_sack.json
 4153759edaa2310f23a6604f54506bde111c60b1 data/chilibulletweapons/advancements/recipes/misc/bullet_chili_sack.json
 6904bee18322e0ade707fede6c168b64b82dbe23 data/chilibulletweapons/advancements/recipes/misc/chili_seeds.json
@@ -36,6 +37,7 @@ eb6a06d71e7be557d85bf5852e04a2adf9eebff4 data/chilibulletweapons/recipes/gun.jso
 6f04924eb5cab5df25e6f14a322f73eac6cd8c55 data/chilibulletweapons/recipes/half_chili_fish_sandwich.json
 c9eb6fc1aaf6e4a3958cb9943b69cd5d83532a11 data/chilibulletweapons/recipes/half_chili_meat_sandwich.json
 8aa81d3a29d5aeb0990237761feb65a891374c2f data/chilibulletweapons/recipes/half_chili_potato_sandwich.json
+631091eaedf4d795b9c0148767e8f4aae2a8622c data/chilibulletweapons/recipes/pasta_oil_and_chili.json
 7227b19466cb1e8d3b569f75575d5bc42e036114 data/chilibulletweapons/recipes/upgrade_gun_barrel.json
 c59415b55c308ea89a904e62360f000c9ee1dfbf data/chilibulletweapons/recipes/upgrade_gun_bayonet.json
 b04c39be6df5ecc16fc4d9ede036111159a85180 data/chilibulletweapons/recipes/upgrade_gun_mechanism.json
