@@ -1,2 +1,2 @@
-// 1.20.1	2024-03-12T22:51:12.2262049	Languages: en_us
-1afa19035fb983d2199bb2713aedc823b14cb174 assets/chilibulletweapons/lang/en_us.json
+// 1.20.1	2024-03-13T19:52:28.1505165	Languages: en_us
+32ec761277baf6c875b3925063c3e21b0390f37c assets/chilibulletweapons/lang/en_us.json
