@@ -25,6 +25,7 @@
   "item.chilibulletweapons.half_chili_meat_sandwich": "Half-sized Chili Meat Sandwich",
   "item.chilibulletweapons.half_chili_potato_sandwich": "Half-sized Chili Potato Sandwich",
   "item.chilibulletweapons.machine_gun": "Chili Bullet Machine Gun",
+  "item.chilibulletweapons.pasta_oil_and_chili": "Pasta Olio e Peperoncino",
   "item.chilibulletweapons.upgrade_gun_barrel": "Gun Barrel Upgrade",
   "item.chilibulletweapons.upgrade_gun_bayonet": "Bayonet Upgrade",
   "item.chilibulletweapons.upgrade_gun_mechanism": "Gun Mechanism Upgrade",
