@@ -1,0 +1,6 @@
+{
+  "parent": "minecraft:item/generated",
+  "textures": {
+    "layer0": "chilibulletweapons:item/pasta_oil_and_chili"
+  }
+}
