@@ -79,6 +79,16 @@ public class ModRecipeProvider extends RecipeProvider implements IConditionBuild
                 .unlockedBy("has_curved_chili", has(ModItems.CURVED_CHILI))
                 .save(recipeOutput, getItemId(ModItems.CHILI_MEAT_SANDWICH));
 
+        ShapedRecipeBuilder.shaped(RecipeCategory.FOOD, ModItems.PASTA_OIL_AND_CHILI)
+                .pattern(" c ")
+                .pattern("www")
+                .pattern(" b ")
+                .define('c', ModItems.CURVED_CHILI)
+                .define('w', Tags.Items.CROPS_WHEAT)
+                .define('b', Items.BOWL)
+                .unlockedBy("has_curved_chili", has(ModItems.CURVED_CHILI))
+                .save(recipeOutput, getItemId(ModItems.PASTA_OIL_AND_CHILI));
+
         ShapelessRecipeBuilder.shapeless(RecipeCategory.FOOD, ModItems.CHILI_POTATO_SANDWICH, 2)
                 .requires(ModItems.CURVED_CHILI)
                 .requires(Items.BAKED_POTATO)
