@@ -5,7 +5,8 @@
 ## [Unreleased]
 ### Added
 - Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.
-- Gun upgrade system and upgrade parts.
+- Pasta olio e peperoncino.
+- Gun upgrade system and upgrade items.
 
 ### Changed
 - Increase composting chance of half-sized chili potato sandwich.
